@@ -331,7 +331,7 @@ sub initialize( $ ) {
 		    TC_SCRIPT => '',
 		    EXPORT => 0,
 		    UNTRACKED => 0,
-		    VERSION => "4.4.7-Beta1",
+		    VERSION => "4.4.7-Beta2",
 		    CAPVERSION => 40407 ,
 		  );
 
