@@ -1,6 +1,6 @@
 %define name shorewall
 %define version 4.4.7
-%define release 0Beta1
+%define release 0Beta2
 
 Summary: Shoreline Firewall is an iptables-based firewall for Linux systems.
 Name: %{name}
@@ -107,6 +107,8 @@ fi
 %doc COPYING INSTALL changelog.txt releasenotes.txt Contrib/* Samples 
 
 %changelog
+* Fri Jan 22 2010 Tom Eastep tom@shorewall.net
+- Updated to 4.4.7-0Beta2
 * Thu Jan 21 2010 Tom Eastep tom@shorewall.net
 - Add /usr/share/shorewall/helpers
 * Sun Jan 17 2010 Tom Eastep tom@shorewall.net
