@@ -1,4 +1,4 @@
-Shorewall 4.4.7
+Shorewall 4.4.7 - Beta 2.
 
 ----------------------------------------------------------------------------
                R E L E A S E  4 . 4  H I G H L I G H T S
@@ -182,7 +182,14 @@ Shorewall 4.4.7
         P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 7
 ----------------------------------------------------------------------------
 
-None.
+1)  The tcinterfaces and tcpri files are now installed by the
+    installer and are included in the rpm.
+
+2)  An invalid octal number (e.g., 080) appearing in a port list
+    resulted in a perl error message. 
+
+    As part of this fix, both hex and octal numbers are now accepted
+    for protocol and port numbers.
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
